wm_app_nginx_ingress_service_logging.yml
# Use this ingress-service for AKS environment
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wmapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - secretName: MYTLS_SECRET_NAME
  rules:
    - host: kibana-aks.mydomain.com
      http:
       paths:
       - path: /*
         backend:
           serviceName: kibana
           servicePort: 80
    - host: grafana-aks.mydomain.com
      http:
       paths:
       - path: /*
         backend:
           serviceName: grafana
           servicePort: 80
    - host: prom-aks.mydomain.com
      http:
       paths:
       - path: /*
         backend:
           serviceName: prometheus-server
           servicePort: 80
